Correction alignement bouton supprimer

--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,23 @@ header h1 {
   transform: scale(1.02);
 }
 
+.tab-name {
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-right: 8px;
+}
+
+.group-name {
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-right: 8px;
+}
+
+
 /* SCROLLBARS */
 #groupsList::-webkit-scrollbar,
 #tabsList::-webkit-scrollbar {
